Exercicio 1 - Parte 1 - Dia 5 - Bloco 6 - p.2

--- a/Web_Development_Fundamentals/block_6/day_5/part_1/exerc1.css
+++ b/Web_Development_Fundamentals/block_6/day_5/part_1/exerc1.css
@@ -17,3 +17,28 @@ img {
 figure {
   margin: 20px;
 }
+
+@media (min-width:800px) {
+  body {
+    background-color: aqua;
+    font-size: 25px;
+    margin: 35px;
+  }
+
+  h1 {
+    font-size: 39px;
+  }
+  
+  h2 {
+    font-size: 33px;
+  }
+
+  figure {
+    width: 40%;
+  }
+
+  .figures {
+    display: flex;
+    flex-flow: row wrap;
+  }
+}
