Exercicio 1 - Parte 1 - Dia 5 - Bloco 6 - p.3

--- a/Web_Development_Fundamentals/block_6/day_5/part_1/exerc1.css
+++ b/Web_Development_Fundamentals/block_6/day_5/part_1/exerc1.css
@@ -42,3 +42,20 @@ figure {
     flex-flow: row wrap;
   }
 }
+
+@media (min-width: 1300px) {
+  body {
+    background-color: blue;
+    font-size: 35px;
+    margin: 45px;
+    max-width: 1800px;
+  }
+
+  h1 {
+    font-size: 44px;
+  }
+  
+  h2 {
+    font-size: 38px;
+  }
+}
