--- a/Web_Development_Fundamentals/block_6/day_5/part_1/exerc1.css
+++ b/Web_Development_Fundamentals/block_6/day_5/part_1/exerc1.css
@@ -43,12 +43,11 @@ figure {
   }
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1300px) and (max-width: 1800px) {
   body {
     background-color: blue;
     font-size: 35px;
     margin: 45px;
-    max-width: 1800px;
   }
 
   h1 {
