Exercicio 2 - Parte 2 - Dia 5 - Bloco 6 - p.2

--- a/Web_Development_Fundamentals/block_6/day_5/part_2/exerc2.css
+++ b/Web_Development_Fundamentals/block_6/day_5/part_2/exerc2.css
@@ -7,9 +7,7 @@ html {
 }
 
 @media (max-width:600px) {
-
   body {
-    font-size: 20px;
     margin: 35px;
   }
 
@@ -29,7 +27,38 @@ html {
   }
 
   p {
+    font-size: 17px;
     text-align: justify;
   }
 
+}
+
+@media (min-width: 601px) and (max-width: 1200px) {
+  body {
+    font-size: 22px;
+    margin: 45px;
+  }
+
+  nav ul {
+  display: flex;
+  justify-content: space-around;
+  }
+
+  h1 {
+    font-size: 32px;
+  }
+  
+  h2 {
+    font-size: 27px;
+    text-align: center;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 21px;
+    text-align: justify;
+  }
 }
