--- a/Front-end/block_13/day_2/exercise-pokedex-router/src/pokemon.css
+++ b/Front-end/block_13/day_2/exercise-pokedex-router/src/pokemon.css
@@ -8,3 +8,22 @@
   border: 1px gray solid;
   border-radius: 10px;
 }
+
+.pokemon-details {
+  display: flex;
+	flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: 10px 10px;
+  border: 1px gray solid;
+  border-radius: 10px;
+}
+
+.location-container {
+	display: flex;
+	flex-direction: row;
+}
+
+.location-map {
+	margin: 10px 40px;
+}
